# MARA

./: .env.example  .gitignore  README.md  mara.config.example.yaml  pyproject.toml
docs/: CONTRIBUTING.md
examples/: quickstart.py
mara/: __init__.py
mara/agents/: __init__.py  audience_analysis.py  campaign_analysis.py  competitor_research.py  content_strategy.py  seo_research.py
mara/core/: __init__.py  agent.py  memory.py  pipeline.py  providers.py  runtime.py
mara/pipelines/: __init__.py
mara/utils/: __init__.py
tests/: __init__.py  test_agent.py  test_memory.py  test_pipeline.py
